# Prodo

./: README.md
Backend/: .gitignore  README.md  pyproject.toml  requirements.txt
Backend/config/: asgi.py  settings.py  urls.py  wsgi.py
Backend/config/settings/: base.py  development.py  production.py
Backend/prodo/profiles/: apps.py  models.py  serializers.py  urls.py  views.py
Backend/prodo/profiles/migrations/: 0001_initial.py  0002_appuser_created_at_appuser_updated_at.py
Backend/prodo/todos/: apps.py  models.py  serializers.py  views.py
Backend/prodo/todos/migrations/: 0001_initial.py
