[project]
name = "prodo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-cors-headers>=4.6.0",
    "django>=5.1.4",
    "djangorestframework>=3.15.2",
    "psycopg2>=2.9.10",
    "django-environ>=0.11.2",
    "djangorestframework-simplejwt>=5.3.1",
    "pillow>=11.0.0",
    "django-redis>=5.4.0",
]
